@@ -123,6 +123,7 @@
 - [X] Got segfault in unit tests (but work with travis-ci)
 - [ ] See why librainbrurpg-logger.so is a shared lib. while 
   - [ ] Try to install clang 3.8 on travis
+    got a 404 on llvm apt repository URL
 ***** DONE Trying cmake as a global build system
       CLOCK: [2016-08-18 jeu. 02:24]--[2016-08-18 jeu. 02:32] =>  0:08
       CLOCK: [2016-08-18 jeu. 01:36]--[2016-08-18 jeu. 02:14] =>  0:38
